manifests/sample-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: sample-api
  name: system-service
  labels:
    app: system-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /system/system
spec:
  type: NodePort
  selector:
    app: system-app
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: sample-api
  name: data-service
  labels:
    app: data-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /data/system
spec:
  type: NodePort
  selector:
    app: data-app
  ports:
    - port: 80
      targetPort: 80
