manifests/sample-api/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-api-ingress
  namespace: sample-api
  labels:
    app: sample-api
  annotations:
    kubernetes.io/ingress.class: alb
#    kubernetes.io/ingress.class: alb
#    alb.ingress.kubernetes.io/scheme: internet-facing
#    alb.ingress.kubernetes.io/target-type: ip
#    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
#    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
#    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
#    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
#    alb.ingress.kubernetes.io/success-codes: '200'
#    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
#    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  rules:
    - http:
        paths:
          - path: /data
            pathType: Prefix
            backend:
              service:
                name: data-service
                port:
                  number: 80
          - path: /system
            pathType: Prefix
            backend:
              service:
                name: system-service
                port:
                  number: 80
